--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <label for="password">Password:</label>
       <input type="password" id="password" placeholder="Enter your password" />
 
-      <button>Login</button>
+      <button onclick="window.location.href='index1.html'">Login</button>
 
       <div class="links">
         <a href="#">Forgot Password?</a> | <a href="#">Sign Up</a>
