--- a/index1.html
+++ b/index1.html
@@ -1,192 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Coming Company Status</title>
-<style>
-  * {margin:0;padding:0;box-sizing:border-box;font-family:"Poppins",sans-serif;}
-  body {
-    background:url("https://www.admissionlelo.in/upload/1555574153campus%203.jpg") center/cover no-repeat fixed;
-    color:#fff;
-    min-height:100vh;
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    justify-content:flex-start;
-  }
-  body::before {
-    content:"";
-    position:absolute;
-    inset:0;
-    background:rgba(0,0,0,0.75);
-    z-index:-1;
-  }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GLA Placement Portal | Preparation</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: "Poppins", sans-serif;
+    }
 
-  h1 {
-    margin:40px 0 20px;
-    font-size:2.5rem;
-    color:#cc33ff;
-    text-align:center;
-    text-shadow:0 0 10px #cc33ff;
-  }
+    body {
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: url("https://www.admissionlelo.in/upload/1555574153campus%203.jpg") 
+        center center / cover no-repeat fixed;
+      position: relative;
+      color: #fff;
+    }
 
-  .container {
-    width:90%;
-    max-width:1100px;
-    margin-bottom:60px;
-  }
+    body::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.75);
+      z-index: -1;
+    }
 
-  .stats {
-    display:grid;
-    grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-    gap:20px;
-    margin-bottom:40px;
-  }
-  .stat-card {
-    background:rgba(255,255,255,0.08);
-    border-radius:15px;
-    border:1px solid rgba(255,255,255,0.15);
-    padding:20px;
-    text-align:center;
-    transition:0.3s;
-  }
-  .stat-card:hover {
-    border-color:#cc33ff;
-    box-shadow:0 0 15px #cc33ff;
-    transform:translateY(-5px);
-  }
-  .stat-card h3 {font-size:18px;color:#ccc;margin-bottom:8px;}
-  .stat-card p {font-size:22px;color:#00ffb3;font-weight:600;}
+    .container {
+      text-align: center;
+      background: rgba(22, 27, 34, 0.85);
+      padding: 60px 80px;
+      border-radius: 25px;
+      backdrop-filter: blur(10px);
+      box-shadow: 0 0 30px rgba(0, 0, 0, 0.6);
+      animation: fadeIn 1s ease;
+    }
 
-  .section-title {
-    text-align:center;
-    font-size:1.8rem;
-    color:#66b3ff;
-    margin:30px 0 15px;
-    text-shadow:0 0 10px #66b3ff;
-  }
+    h1 {
+      font-size: 36px;
+      color: #1a73e8;
+      margin-bottom: 15px;
+    }
 
-  .company-grid {
-    display:grid;
-    grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-    gap:20px;
-  }
-  .company-card {
-    background:rgba(255,255,255,0.08);
-    border-radius:15px;
-    border:1px solid rgba(255,255,255,0.2);
-    padding:20px;
-    position:relative;
-    transition:0.3s;
-    overflow:hidden;
-  }
-  .company-card::before {
-    content:"";
-    position:absolute;
-    inset:0;
-    background:linear-gradient(45deg,#cc33ff,#ff33cc);
-    opacity:0;
-    transition:0.4s;
-    z-index:0;
-  }
-  .company-card:hover::before {opacity:0.15;}
-  .company-card:hover {
-    border-color:#cc33ff;
-    box-shadow:0 0 20px #cc33ff;
-    transform:translateY(-5px);
-  }
-  .company-card h4 {color:#ffcc00;font-size:20px;margin-bottom:10px;position:relative;z-index:1;}
-  .company-card p {color:#ddd;font-size:15px;margin-bottom:5px;position:relative;z-index:1;}
+    p {
+      font-size: 17px;
+      color: #ccc;
+      margin-bottom: 40px;
+    }
 
-  .back-btn {
-    display:inline-block;
-    margin:30px auto;
-    background:linear-gradient(135deg,#1a73e8,#4dabf7);
-    color:#fff;
-    padding:12px 28px;
-    border:none;
-    border-radius:10px;
-    font-size:16px;
-    font-weight:600;
-    text-decoration:none;
-    transition:0.3s;
-  }
-  .back-btn:hover {
-    transform:translateY(-3px);
-    box-shadow:0 0 20px #1a73e8;
-  }
+    .tab-grid {
+      display: grid;
+      grid-template-columns: repeat(2, 230px);
+      gap: 35px;
+      justify-content: center;
+    }
 
-  footer {
-    text-align:center;
-    color:#999;
-    font-size:14px;
-    margin-top:40px;
-  }
-</style>
+    .tab-card {
+      background: rgba(255, 255, 255, 0.08);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      border-radius: 20px;
+      padding: 30px;
+      cursor: pointer;
+      transition: all 0.4s ease;
+      font-size: 18px;
+      font-weight: 600;
+      letter-spacing: 0.5px;
+      color: #fff;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .tab-card::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: linear-gradient(45deg, #1a73e8, #00ffae);
+      opacity: 0;
+      transition: 0.4s ease;
+      z-index: 0;
+    }
+
+    .tab-card:hover::before {
+      opacity: 0.25;
+    }
+
+    .tab-card span {
+      position: relative;
+      z-index: 1;
+    }
+
+    .tab-card:hover {
+      transform: translateY(-6px) scale(1.05);
+      border-color: #1a73e8;
+      box-shadow: 0 0 20px rgba(26, 115, 232, 0.6);
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .footer {
+      margin-top: 35px;
+      font-size: 13px;
+      color: #888;
+    }
+  </style>
 </head>
 <body>
-  <h1>Coming Company Status</h1>
   <div class="container">
+    <h1>GLA Placement Preparation</h1>
+    <p>Choose your section to start your journey toward placements.</p>
 
-    <div class="stats">
-      <div class="stat-card">
-        <h3>Total Companies</h3>
-        <p>25</p>
-      </div>
-      <div class="stat-card">
-        <h3>Students Placed</h3>
-        <p>180</p>
-      </div>
-      <div class="stat-card">
-        <h3>Highest Package</h3>
-        <p>18 LPA (Amazon)</p>
-      </div>
-      <div class="stat-card">
-        <h3>Average Package</h3>
-        <p>6.2 LPA</p>
-      </div>
+    <div class="tab-grid">
+      <div class="tab-card" onclick="openTab('index2.html')"><span>Track Your Year</span></div>
+      <div class="tab-card" onclick="openTab('index8.html')"><span>Package Oriented</span></div>
     </div>
 
-    <h2 class="section-title">Upcoming Companies</h2>
-    <div class="company-grid">
-      <div class="company-card">
-        <h4>TCS</h4>
-        <p><strong>Date:</strong> 25th October 2025</p>
-        <p><strong>Role:</strong> Software Engineer</p>
-        <p><strong>CGPA:</strong> 6.5+</p>
-        <p><strong>Type:</strong> On Campus</p>
-      </div>
-      <div class="company-card">
-        <h4>Infosys</h4>
-        <p><strong>Date:</strong> 2nd November 2025</p>
-        <p><strong>Role:</strong> System Engineer</p>
-        <p><strong>CGPA:</strong> 7.0+</p>
-        <p><strong>Type:</strong> On Campus</p>
-      </div>
-    </div>
-
-    <h2 class="section-title">Companies Already Visited</h2>
-    <div class="company-grid">
-      <div class="company-card">
-        <h4>Wipro</h4>
-        <p><strong>Date:</strong> 15th September 2025</p>
-        <p><strong>Role:</strong> Project Engineer</p>
-        <p><strong>CGPA:</strong> 6.0+</p>
-        <p><strong>Students Placed:</strong> 18</p>
-      </div>
-      <div class="company-card">
-        <h4>Accenture</h4>
-        <p><strong>Date:</strong> 28th August 2025</p>
-        <p><strong>Role:</strong> Associate Software Engineer</p>
-        <p><strong>CGPA:</strong> 6.5+</p>
-        <p><strong>Students Placed:</strong> 12</p>
-      </div>
-    </div>
-
-    <a href="index1.html" class="back-btn">⬅ Back to Dashboard</a>
-
-    <footer>© 2025 Placement Cell | All Rights Reserved</footer>
+    <div class="footer">© 2025 GLA University | Placement Prep Portal</div>
   </div>
+
+  <script>
+    function openTab(page) {
+      window.location.href = page;
+    }
+  </script>
 </body>
 </html>
