--- a/index10.html
+++ b/index10.html
@@ -1,193 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Professional Coding Quiz</title>
-<style>
-body {
-  font-family: 'Segoe UI', Arial, sans-serif;
-  margin:0; padding:0;
-  background: url('https://www.admissionlelo.in/upload/1555574153campus%203.jpg') no-repeat center center fixed;
-  background-size: cover;
-  color:#fff;
-  display: flex; justify-content: center; align-items: center;
-  min-height: 100vh;
-}
-.container {
-  width: 95%; max-width: 900px;
-  background: rgba(0,0,0,0.75); padding: 30px; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.7);
-}
-h1 { font-size:2.2rem; margin-bottom:18px; text-align:center; text-shadow:2px 2px 10px rgba(0,0,0,0.8);}
-.tab-btn { margin:5px; padding:10px 20px; cursor:pointer; border:none; border-radius:10px; background:linear-gradient(135deg,#4caf50,#81c784); color:#fff; transition:0.3s;}
-.tab-btn.active { box-shadow:0 0 20px #fff; transform:translateY(-2px);}
-.tab-btn:hover { transform:translateY(-2px); box-shadow:0 0 15px rgba(255,255,255,0.5);}
-.quiz, .result { display:none; margin-top:20px; }
-.quiz-card { background: rgba(255,255,255,0.08); padding:20px; border-radius:15px; box-shadow:0 5px 15px rgba(0,0,0,0.4); margin-bottom:20px;}
-.quiz-card pre { background: rgba(0,0,0,0.5); padding:15px; border-radius:10px; overflow-x:auto; text-align:left; color:#e6f7ff;}
-textarea { width:100%; height:100px; padding:10px; border-radius:10px; border:none; font-family: monospace; font-size:1rem; margin-top:10px;}
-.option-feedback { margin-top:10px; font-weight:bold; font-size:1.05rem;}
-.submit-btn, #nextBtn, #backBtn { margin-top:15px; padding:10px 25px; font-size:1.05rem; cursor:pointer; border:none; border-radius:10px; background:linear-gradient(135deg,#4caf50,#81c784); color:#fff; transition:0.3s;}
-.submit-btn:hover, #nextBtn:hover, #backBtn:hover { transform:translateY(-2px); box-shadow:0 5px 15px rgba(0,0,0,0.5);}
-.progress-bar { height:20px; background:rgba(255,255,255,0.12); border-radius:10px; margin-bottom:20px; }
-.progress { height:100%; width:0%; background:#4caf50; border-radius:10px; transition: width 0.4s;}
-.wrong-topic { background: rgba(255,0,0,0.35); margin:5px 0; padding:10px; border-radius:8px;}
-.note { font-size:0.95rem; color:#fff9; margin-top:6px; text-align:center;}
-.back-home {
-  display:inline-block;
-  margin-top:25px;
-  background:linear-gradient(135deg,#1a73e8,#4dabf7);
-  color:#fff;
-  padding:12px 30px;
-  border:none;
-  border-radius:10px;
-  font-size:16px;
-  font-weight:600;
-  text-decoration:none;
-  transition:0.3s;
-}
-.back-home:hover {
-  transform:translateY(-3px);
-  box-shadow:0 0 20px #1a73e8;
-}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Track Your Year | Placement Prep</title>
+  <style>
+    * { margin:0; padding:0; box-sizing:border-box; font-family:"Poppins",sans-serif; }
+
+    body {
+      height: 100vh;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      background: url("https://www.admissionlelo.in/upload/1555574153campus%203.jpg") center/cover no-repeat fixed;
+      position: relative;
+      color:#fff;
+    }
+
+    body::before {
+      content:"";
+      position:absolute;
+      inset:0;
+      background: rgba(0,0,0,0.75);
+      z-index:-1;
+    }
+
+    .container {
+      text-align:center;
+      background: rgba(22,27,34,0.85);
+      padding: 50px 70px;
+      border-radius: 25px;
+      backdrop-filter: blur(10px);
+      box-shadow: 0 0 30px rgba(0,0,0,0.6);
+      animation: fadeIn 1s ease;
+    }
+
+    h1 { font-size:35px; color:#1a73e8; margin-bottom:10px; }
+    p { font-size:16px; color:#ccc; margin-bottom:40px; }
+
+    .year-grid {
+      display:grid;
+      grid-template-columns: repeat(2, 200px);
+      gap: 30px;
+      justify-content: center;
+    }
+
+    .year-card {
+      background: rgba(255,255,255,0.08);
+      border:1px solid rgba(255,255,255,0.2);
+      border-radius:20px;
+      padding:25px;
+      cursor:pointer;
+      transition: all 0.4s ease;
+      font-size:18px;
+      font-weight:600;
+      letter-spacing:0.5px;
+      color:#fff;
+      position:relative;
+      overflow:hidden;
+    }
+
+    .year-card::before {
+      content:"";
+      position:absolute;
+      inset:0;
+      background: linear-gradient(45deg,#1a73e8,#00ffae);
+      opacity:0;
+      transition:0.4s ease;
+      z-index:0;
+    }
+
+    .year-card:hover::before { opacity:0.25; }
+    .year-card span { position:relative; z-index:1; }
+    .year-card:hover { transform: translateY(-6px) scale(1.05); border-color:#1a73e8; box-shadow:0 0 20px rgba(26,115,232,0.6); }
+
+    @keyframes fadeIn {
+      from { opacity:0; transform:translateY(20px);}
+      to { opacity:1; transform:translateY(0);}
+    }
+
+    .footer { margin-top:30px; font-size:13px; color:#888; }
+  </style>
 </head>
 <body>
-<div class="container">
-<h1>Professional Coding Quiz</h1>
+  <div class="container">
+    <h1>Select Your Year</h1>
+    <p>Choose your current year to explore recommended programming exercises.</p>
 
-<div id="tabs" style="text-align:center; margin-bottom:14px;">
-  <button class="tab-btn active" onclick="selectTab('1-5', this)">1 - 5 LPA</button>
-  <button class="tab-btn" onclick="selectTab('5-10', this)">5 - 10 LPA</button>
-  <button class="tab-btn" onclick="selectTab('12+', this)">12+ LPA</button>
-</div>
+    <div class="year-grid">
+      <div class="year-card" onclick="openYear('index3.html')"><span>1st Year</span></div>
+      <div class="year-card" onclick="openYear('index4.html')"><span>2nd Year</span></div>
+      <div class="year-card" onclick="openYear('index5.html')"><span>3rd Year</span></div>
+      <div class="year-card" onclick="openYear('index6.html')"><span>4th Year</span></div>
+    </div>
 
-<div class="note">Please answer using Java or C where code is required. Click a tab to start the quiz immediately.</div>
-
-<div class="quiz">
-  <div class="progress-bar"><div class="progress" id="progress"></div></div>
-  <div class="quiz-card">
-    <h2 id="questionTitle"></h2>
-    <pre id="questionCode"></pre>
-    <p>Type the output or short solution (language: Java/C recommended):</p>
-    <textarea id="userAnswer" placeholder="Type exact output or concise answer..."></textarea>
-    <div class="option-feedback" id="feedback"></div>
+    <div class="footer">© 2025 Placement Prep | GLA University</div>
   </div>
-  <div style="display:flex; gap:10px; flex-wrap:wrap;">
-    <button class="submit-btn" onclick="checkAnswer()">Submit</button>
-    <button class="submit-btn" onclick="nextQuestion()" id="nextBtn" style="display:none;">Next</button>
-    <button id="backBtn" onclick="goBack()">Back</button>
-  </div>
-</div>
 
-<div class="result">
-  <h2>Score: <span id="score"></span></h2>
-  <h3>Improve these topics:</h3>
-  <div id="wrongTopics"></div>
-  <button class="submit-btn" onclick="restartQuiz()">Restart</button>
-  <button id="backBtnResult" class="submit-btn" onclick="goBack()">Back</button>
-</div>
-
-<!-- Back to Dashboard -->
-<div style="text-align:center;">
-  <a href="index1.html" class="back-home">⬅ Back to Dashboard</a>
-</div>
-
-</div>
-
-<script>
-function makeQA(question, code, answer, topic){
-  return {question, code, answer: String(answer).trim(), topic};
-}
-
-const q1to5 = [
-  makeQA("Print Hello World", `public class Main {\n  public static void main(String[] args){\n    System.out.println("Hello World");\n  }\n}`, "Hello World", "Java/Basic"),
-  makeQA("Sum two numbers output", `int a=5,b=3;\nSystem.out.println(a+b);`, "8", "Arrays/Basic"),
-  makeQA("Reverse 'abc' output", "", "cba", "Strings")
-];
-const q5to10 = [
-  makeQA("Worst-case time complexity of quicksort", "", "O(n^2)", "DSA"),
-  makeQA("What is the main purpose of sharding?", "", "Scale horizontally; distribute data", "System Design")
-];
-const q12plus = [
-  makeQA("LIS optimized complexity", "", "O(n log n)", "DSA-Advance"),
-  makeQA("Describe MVCC in DBMS", "", "Multiple versions for concurrency", "DBMS-Advance")
-];
-
-const quizData = {"1-5": q1to5, "5-10": q5to10, "12+": q12plus};
-
-let currentQuiz=[], currentIndex=0, score=0, wrongTopicsArr=[];
-const questionTitle=document.getElementById('questionTitle');
-const questionCode=document.getElementById('questionCode');
-const userAnswer=document.getElementById('userAnswer');
-const feedback=document.getElementById('feedback');
-const progressEl=document.getElementById('progress');
-const tabsEl = document.getElementById('tabs');
-
-function selectTab(tab, sender){
-  document.querySelectorAll('.tab-btn').forEach(b=>b.classList.remove('active'));
-  sender.classList.add('active');
-  currentQuiz = quizData[tab] ? quizData[tab].slice() : [];
-  currentIndex = 0; score = 0; wrongTopicsArr = [];
-  if(currentQuiz.length === 0){ alert('No questions defined for this tab yet.'); return; }
-  tabsEl.style.display = 'none';
-  document.querySelector('.note').style.display = 'none';
-  document.querySelector('.quiz').style.display = 'block';
-  document.querySelector('.result').style.display = 'none';
-  showQuestion(); updateProgress();
-}
-
-function showQuestion(){
-  const q = currentQuiz[currentIndex];
-  questionTitle.innerText = `Q${currentIndex+1}: ${q.question} (Topic: ${q.topic})`;
-  questionCode.innerText = q.code || "// No code snippet for this question";
-  userAnswer.value = ''; feedback.innerText = ''; document.getElementById('nextBtn').style.display='none';
-}
-
-function normalizeAnswer(s){ return String(s||'').trim().replace(/\s+/g,' ').toLowerCase(); }
-
-function checkAnswer(){
-  const q = currentQuiz[currentIndex];
-  const given = normalizeAnswer(userAnswer.value);
-  const expected = normalizeAnswer(q.answer);
-  let correct = false;
-  if(expected.length === 0){ correct = given.length > 0; }
-  else if(given === expected || given.includes(expected) || expected.includes(given)){ correct = true; }
-  if(correct){ feedback.style.color='lime'; feedback.innerText='✅ Correct'; score++; }
-  else { feedback.style.color='salmon'; feedback.innerText='❌ Incorrect'; if(!wrongTopicsArr.includes(q.topic)) wrongTopicsArr.push(q.topic); }
-  document.getElementById('nextBtn').style.display='inline-block';
-}
-
-function nextQuestion(){ currentIndex++; if(currentIndex < currentQuiz.length){ showQuestion(); updateProgress(); } else { showResult(); } }
-
-function updateProgress(){ const pct = Math.round((currentIndex/currentQuiz.length)*100); progressEl.style.width = pct + '%'; }
-
-function showResult(){
-  document.querySelector('.quiz').style.display='none';
-  document.querySelector('.result').style.display='block';
-  document.getElementById('score').innerText = score + '/' + currentQuiz.length;
-  const wrongDiv=document.getElementById('wrongTopics'); wrongDiv.innerHTML='';
-  if(wrongTopicsArr.length===0){ wrongDiv.innerHTML="<p style='color:#d4ffd4'>No topics to improve. Great job!</p>"; }
-  else { wrongTopicsArr.forEach(topic=>{ const div=document.createElement('div'); div.className='wrong-topic'; div.innerText=topic; wrongDiv.appendChild(div); }); }
-}
-
-function restartQuiz(){
-  currentIndex=0; score=0; wrongTopicsArr=[];
-  document.querySelector('.result').style.display='none';
-  document.querySelector('.quiz').style.display='block';
-  showQuestion(); updateProgress();
-}
-
-function goBack(){
-  document.querySelector('.quiz').style.display='none';
-  document.querySelector('.result').style.display='none';
-  tabsEl.style.display='block';
-  document.querySelector('.note').style.display='block';
-  document.querySelectorAll('.tab-btn').forEach(b=>b.classList.remove('active'));
-  document.querySelectorAll('.tab-btn')[0].classList.add('active');
-  currentQuiz=[]; currentIndex=0; score=0; wrongTopicsArr=[];
-  progressEl.style.width='0%';
-}
-</script>
+  <script>
+    function openYear(page){
+      window.location.href = page;
+    }
+  </script>
 </body>
 </html>
